# rating-systems

./: LICENSE  README.md  rating-systems.cabal  ratings.cabal
src/Ratings/: Elo.hs  Glicko.hs  Types.hs
